--- a/home.html
+++ b/home.html
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8"/>
 	<title>page home</title>
 </head>
 <body>
-
+<!--cesi est un commentaire-->
+<p> paragaraphe de test</p>
+<ul>
+	<li>element1
+		<ul>
+			<li> element1.1</li>
+			<li> element 1.2</li>
+		</ul>
+	</li>
+	<li>element 2</li>
+	<li>element 3</li>
+</ul>
 </body>
 </html>
