--- a/home.html
+++ b/home.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>page home</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <!--cesi est un commentaire-->
-<p> paragaraphe de test</p>
+<p> paragaraphe de test <em>para</em></p>
+<p class="c">paragraphe de test pour les class</p>
 <ul>
 	<li>element1
 		<ul>
@@ -17,5 +19,15 @@
 	<li>element 2</li>
 	<li>element 3</li>
 </ul>
+<a href="https://google.com"> lien vers google</a>
+<a href="page1.html">lien vers page 1</a>
+<a href="test/page2.html">lien vers page 2</a>
+
+	<figure>
+	<img src="images/mesrara.jpg" alt="photo de ma fille" title="mahleaha benti">
+	<figcaption> figure de ma fille</figcaption>
+
+</figure>
+
 </body>
 </html>
